[package]
name = "bahnansagen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.32", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
html-escape = "0.2.13"
html2text = "0.12.0"
hyper = "1.1.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.3.6"
